<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/ineffective_rel_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left" >

        <TextView
            android:id="@+id/efficacy_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_margin="@dimen/item_spacing"
            android:text="@string/ineffective"
            android:textSize="@dimen/text_size" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/nearly_ineffective_rel_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left" >

        <TextView
            android:id="@+id/efficacy_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_margin="@dimen/item_spacing"
            android:text="@string/nearly_ineffective"
            android:textSize="@dimen/text_size" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/not_very_effective_rel_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left" >

        <TextView
            android:id="@+id/efficacy_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_margin="@dimen/item_spacing"
            android:text="@string/not_very_effective"
            android:textSize="@dimen/text_size" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/effective_rel_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left" >

        <TextView
            android:id="@+id/efficacy_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_margin="@dimen/item_spacing"
            android:text="@string/effective"
            android:textSize="@dimen/text_size" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/super_effective_rel_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left" >

        <TextView
            android:id="@+id/efficacy_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_margin="@dimen/item_spacing"
            android:text="@string/super_effective"
            android:textSize="@dimen/text_size" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/mega_effective_rel_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left" >

        <TextView
            android:id="@+id/efficacy_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_margin="@dimen/item_spacing"
            android:text="@string/mega_effective"
            android:textSize="@dimen/text_size" />
    </RelativeLayout>

</LinearLayout>